# tap

./: .buildinfo  .buildinfo.bak  .env.example  .gitattributes  .gitignore  README.md  chat.py  constants.py  gcg_sweep.sh  genindex.html  getting-started.html  index.html  interface.py  logic.py  main.py  objects.inv  py-modindex.html  pyproject.toml  pyrefly-lenient.toml  search.html  searchindex.js
.doctrees/: getting-started.doctree  index.doctree
.doctrees/__intersphinx_cache__/: hf_objects.inv
.doctrees/api/: index.doctree  kernel_entropy.doctree  olmo_tap.doctree
.doctrees/api/_generated/: kernel_entropy.doctree  kernel_entropy.entropy.doctree  kernel_entropy.generation.doctree  kernel_entropy.nli.doctree  kernel_entropy.pipeline.doctree  olmo_tap.benchmarks.doctree  olmo_tap.benchmarks.harness.doctree  olmo_tap.benchmarks.inference.doctree  olmo_tap.benchmarks.plotting.doctree  olmo_tap.constants.doctree  olmo_tap.doctree  olmo_tap.experiments.doctree  olmo_tap.experiments.hydra_demo.doctree  olmo_tap.experiments.robustness.amplegcg.doctree  olmo_tap.experiments.robustness.data.doctree  olmo_tap.experiments.robustness.doctree  olmo_tap.experiments.robustness.engine.doctree  olmo_tap.experiments.robustness.precompute_gcg.doctree  olmo_tap.experiments.uncertainty.data.doctree  olmo_tap.experiments.uncertainty.doctree  olmo_tap.experiments.utils.config.doctree  olmo_tap.experiments.utils.doctree  olmo_tap.experiments.utils.random_seed.doctree  olmo_tap.experiments.utils.weights.doctree  olmo_tap.hydra.doctree
.doctrees/guides/: app.doctree  architecture.doctree  kernel-entropy.doctree  olmo-tap.doctree  overview.doctree
.github/workflows/: discord-notify.yml  pull_request_template.md  python-ci.yml
Dataset-Analysis/: medmcqa_deep_analysis.py
_modules/: index.html
_modules/app/backend/: bert_inference.html  claim_confidence.html  claim_splitter.html  hydra_inference.html  question_classifier.html  response_payloads.html  server.html
_modules/kernel_entropy/: entropy.html  generation.html  nli.html  pipeline.html
_modules/olmo_tap/: hydra.html
_modules/olmo_tap/benchmarks/: harness.html  inference.html  plotting.html
_modules/olmo_tap/experiments/: hydra_demo.html
_modules/olmo_tap/final_evals/: robustness_sweep.html  uncertainty_sweep.html
_modules/olmo_tap/inference/: loading_weights.html  poe.html  poe_demo_no_kv.html
_sources/: index.md.txt
_sources/api/: app.rst.txt  index.md.txt
_sources/guides/: app.md.txt
api/: app.html  index.html  kernel_entropy.html  olmo_tap.html
api/_generated/: app.backend.adversarial_suffixes.html  app.backend.bert_inference.html  app.backend.claim_confidence.html  app.backend.claim_splitter.html  app.backend.constants.html  app.backend.html  app.backend.hydra_inference.html  app.backend.modal_app.html  app.backend.question_classifier.html  app.backend.response_payloads.html  app.backend.server.html  kernel_entropy.entropy.html  kernel_entropy.generation.html  kernel_entropy.html  kernel_entropy.nli.html  kernel_entropy.pipeline.html  olmo_tap.benchmarks.harness.html  olmo_tap.benchmarks.html  olmo_tap.benchmarks.inference.html  olmo_tap.benchmarks.plotting.html  olmo_tap.constants.html  olmo_tap.experiments.html  olmo_tap.experiments.hydra_demo.html  olmo_tap.experiments.robustness.amplegcg.html  olmo_tap.experiments.robustness.build_attack_bank.html  olmo_tap.experiments.robustness.data.html  olmo_tap.experiments.robustness.engine.html  olmo_tap.experiments.robustness.eval.html  olmo_tap.experiments.robustness.html  olmo_tap.experiments.robustness.precompute_gcg.html  olmo_tap.experiments.robustness.training.html  olmo_tap.experiments.security.data.html  olmo_tap.experiments.security.engine.html  olmo_tap.experiments.security.eval.html  olmo_tap.experiments.security.html  olmo_tap.experiments.security.training.html  olmo_tap.experiments.uncertainty.data.html  olmo_tap.experiments.uncertainty.engine.html  olmo_tap.experiments.uncertainty.eval.html  olmo_tap.experiments.uncertainty.html  (+33 more)
app/: README.md
app/backend/: adversarial_suffixes.py  bert_inference.py  claim_confidence.py  claim_splitter.py  constants.py  hydra_inference.py  mock_metrics.py  modal_app.py  question_classifier.py  response_payloads.py  server.py
app/frontend/: index.html  package-lock.json  package.json
dataset_analysis/: medmcqa_deep_analysis.py
dataset_analysis/dataset_analysis_output/: calibration_split_indices.json  medmcqa_summary.json  sample_questions.json  subject_label_balance.csv
demo/: README.md
demo/backend/: mock_metrics.py  server.py
demo/frontend/: index.html  package.json
docs/: Makefile
docs/source/: conf.py  getting-started.md  index.md  index.rst
examples/: kle.py  nli.py  olmo.py  qwen.py
gradio_demo/: chat.py  constants.py  interface.py  logic.py
guides/: app.html  architecture.html  kernel-entropy.html  olmo-tap.html  overview.html
kernel_entropy/: README.md  __init__.py  entropy.py  generation.py  nli.py  pipeline.py
model-selection/: benchmark.ipynb
olmo_tap/: README.md  constants.py  hydra.py
olmo_tap/benchmarks/: config.json  harness.py  inference.py  plotting.py
olmo_tap/experiments/: basic.py  hydra_demo.py
olmo_tap/final_evals/: _loading.py  poe_eval_attack_bank.json  robustness_sweep.py  uncertainty_sweep.py
olmo_tap/inference/: loading_weights.py  mcq.py  poe.py  poe_demo_no_kv.py
react_app/backend/: constants.py  server.py
react_app/frontend/: package.json
scripts/: download_model.py
superpowers/specs/: 2026-04-26-stability-validity-heatmap-design.md
tests/: test_adversarial_suffixes.py  test_app_constants.py  test_claim_confidence.py  test_claim_splitter.py  test_elo_engine.py  test_gradio_constants.py  test_hydra_forward_split.py  test_hydra_inference.py  test_judge.py  test_kernel_entropy.py  test_match_builder.py  test_nli_labels.py  test_olmo_tap_constants.py  test_poe_eval_kwargs.py  test_poe_metrics.py  test_question_classifier.py  test_random_seed.py  test_response_payloads.py  test_sample.py  test_server.py  test_server_lifespan.py
(+280 files in other folders)
