[project]
name = "msc-ai-group-project"
version = "0.1.0"
description = "Exposing LLM uncertainty, unfairness, and other related trustworthiness metrics to users at response time."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.3.0",
    "huggingface-hub",
    "pyrefly>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["olmo_tap", "kernel_entropy"]

# =============================================
# PIXI CONFIGURATION - All dependency management
# =============================================

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

# ---------------------------------------------
# Dependencies (conda-forge)
# ---------------------------------------------
[tool.pixi.dependencies]
python = "3.13.*"
pytest = ">=9.0"
ruff = ">=0.8"
python-dotenv = ">=1.2.2,<2"
git-lfs = ">=3.7.1,<4"
nltk = ">=3.9"

# ---------------------------------------------
# CUDA Feature (for GPU users)
# ---------------------------------------------
[tool.pixi.feature.cuda.system-requirements]
cuda = "12.4"

# (linux-64 only)

[tool.pixi.feature.cuda.target.linux-64.dependencies]
pytorch = ">=2.6"
flash-attn = ">=2.8.3,<3"
sentencepiece = ">=0.2.1,<0.3"
fsspec = "<=2026.2.0"

[tool.pixi.feature.cuda.target.linux-64.pypi-dependencies]
ai2-olmo-core = { git = "https://github.com/msc-ai-mmmjo/OLMo-core.git", rev = "521ad5a8cddcf65fee4447b384cc2a12dfc732e9", extras = ["transformers", "wandb"] }
transformers = ">=5.0"
tokenizers = ">=0.20"
hf-transfer = "*"
peft = "*"
datasets = ">=2.10"
scipy = "*"
matplotlib = "*"
msc-ai-group-project = { path = ".", editable = true }

# ---------------------------------------------
# Environments
# ---------------------------------------------
[tool.pixi.environments]
default = { solve-group = "default" }
cuda = { features = ["cuda"], solve-group = "cuda" }

# ---------------------------------------------
# Tasks
# ---------------------------------------------
[tool.pixi.tasks]
# Linting
lint = "ruff check ."
lint-fix = "ruff check . --fix"

# Formatting
format = "ruff format ."
format-check = "ruff format . --check"

# Testing
test = { cmd = "pytest", default-environment = "cuda" }
test-cov = "pytest --cov"

# Type checking
typecheck = { cmd = "pyrefly check", default-environment = "cuda" }

# Application
serve = "python interface.py"
app-api = "PYTHONPATH=. uvicorn app.backend.server:app --port 8000 --ws none"

# Kernel Language Entropy (CUDA only)
kle = { cmd = "python examples/kle.py", default-environment = "cuda" }
nli = { cmd = "python examples/nli.py", default-environment = "cuda" }
olmo = { cmd = "python examples/olmo.py", default-environment = "cuda" }

# CI (runs all checks)
check = { depends-on = ["lint", "format-check", "typecheck", "test"] }

[tool.pyrefly]
project-includes = [
    "**/*.py*",
]
