[project]
name = "msc-ai-group-project"
version = "0.1.0"
description = "Exposing LLM uncertainty, unfairness, and other related trustworthiness metrics to users at response time."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.3.0",
    "huggingface-hub",
    "pyrefly>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["olmo_tap", "kernel_entropy"]

# =============================================
# PIXI CONFIGURATION - All dependency management
# =============================================

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

# ---------------------------------------------
# Dependencies (conda-forge)
# ---------------------------------------------
[tool.pixi.dependencies]
python = "3.13.*"
pytest = ">=9.0"
ruff = ">=0.8"
python-dotenv = ">=1.2.2,<2"
git-lfs = ">=3.7.1,<4"
nltk = ">=3.9"

# ---------------------------------------------
# Top-level PyPI Dependencies
# ---------------------------------------------
# Kept at top level so the Modal CLI is available in the default env
# (deploying doesn't require the cuda feature / GPU pip stack).
[tool.pixi.pypi-dependencies]
modal = ">=1.0"

# ---------------------------------------------
# CUDA Feature (for GPU users)
# ---------------------------------------------
[tool.pixi.feature.cuda.system-requirements]
cuda = "12.4"

# (linux-64 only)

[tool.pixi.feature.cuda.target.linux-64.dependencies]
pytorch = ">=2.6"
flash-attn = ">=2.8.3,<3"
sentencepiece = ">=0.2.1,<0.3"
fsspec = "<=2026.2.0"

[tool.pixi.feature.cuda.target.linux-64.pypi-dependencies]
ai2-olmo-core = { git = "https://github.com/msc-ai-mmmjo/OLMo-core.git", rev = "521ad5a8cddcf65fee4447b384cc2a12dfc732e9", extras = ["transformers", "wandb"] }
transformers = ">=5.0"
tokenizers = ">=0.20"
hf-transfer = "*"
peft = "*"
datasets = ">=2.10"
scipy = "*"
matplotlib = "*"
msc-ai-group-project = { path = ".", editable = true }

# ---------------------------------------------
# Evals Feature (Elo tournament judge pipeline)
# ---------------------------------------------
# Scoped to the default env only. The judge calls Anthropic's Messages
# API and is not needed in the cuda env (which is for OLMo training /
# inference). Keeping it out of cuda also avoids re-resolving against
# the huggingface-hub<0.28.0 pin pulled in by ai2-olmo-core.
[tool.pixi.feature.evals.pypi-dependencies]
anthropic = "*"

# ---------------------------------------------
# Docs Feature (Sphinx site)
# ---------------------------------------------
# Docs env composes the `cuda` feature so autodoc can import the real
# torch/transformers/ai2-olmo-core at build time. This is the mainstream
# pattern (PyTorch, HuggingFace, scikit-learn, JAX all do this) and
# avoids the fragility of autodoc_mock_imports with PEP 604 annotations.
[tool.pixi.feature.docs.pypi-dependencies]
sphinx = ">=8"
furo = "*"
myst-parser = { version = "*", extras = ["linkify"] }
sphinx-copybutton = "*"
sphinx-autobuild = "*"
ghp-import = "*"

# ---------------------------------------------
# Environments
# ---------------------------------------------
[tool.pixi.environments]
default = { features = ["evals"], solve-group = "default" }
cuda = { features = ["cuda"], solve-group = "cuda" }
docs = { features = ["docs", "cuda"], solve-group = "cuda" }

# ---------------------------------------------
# Tasks
# ---------------------------------------------
[tool.pixi.tasks]
# Linting
lint = "ruff check ."
lint-fix = "ruff check . --fix"

# Formatting
format = "ruff format ."
format-check = "ruff format . --check"

# Testing
test = { cmd = "pytest", default-environment = "cuda" }
test-cov = "pytest --cov"

# Type checking
typecheck = { cmd = "pyrefly check", default-environment = "cuda" }

# Application
serve = "python interface.py"
app-api = "PYTHONPATH=. uvicorn app.backend.server:app --port 8000 --ws none"

# Modal deployment
# deploy: stable URL, persists until redeployed. serve: ephemeral dev URL with live reload, tears down on exit.
modal-deploy = "modal deploy app/backend/modal_app.py"
modal-serve = "modal serve app/backend/modal_app.py"

# Kernel Language Entropy (CUDA only)
kle = { cmd = "python examples/kle.py", default-environment = "cuda" }
nli = { cmd = "python examples/nli.py", default-environment = "cuda" }
olmo = { cmd = "python examples/olmo.py", default-environment = "cuda" }

# Elo evaluation tournaments (CUDA + API credits)
elo-tournament1 = { cmd = "python -m olmo_tap.final_evals.elo.run_tournament --config olmo_tap/final_evals/elo/configs/tournament1.yaml", default-environment = "cuda" }

# Documentation
# -W promotes warnings to errors so broken cross-references fail the build.
docs = { cmd = "sphinx-build -W -b html -d docs/build/doctrees docs/source docs/build/html", default-environment = "docs" }
docs-serve = { cmd = "sphinx-autobuild -d docs/build/doctrees docs/source docs/build/html --host 0.0.0.0 --port 8765", default-environment = "docs" }
docs-clean = { cmd = "rm -rf docs/build docs/source/api/_generated", default-environment = "docs" }
# Publish to GitHub Pages by force-pushing the built HTML to the
# `gh-pages` branch. `ghp-import -n` adds `.nojekyll` so GH Pages
# serves `_static/` directories. Enable Pages in repo settings
# (Settings → Pages → Deploy from branch → gh-pages /root) once.
docs-publish = { cmd = "ghp-import -n -p -f -m 'docs: deploy' docs/build/html", default-environment = "docs", depends-on = ["docs-clean", "docs"] }

# CI (runs all checks)
# `docs` is intentionally excluded — it needs the heavy cuda deps and
# CI runs on a CPU-only runner. Build docs locally with `pixi run docs`.
check = { depends-on = ["lint", "format-check", "typecheck", "test"] }

[tool.pyrefly]
project-includes = [
    "**/*.py*",
]
